# Adnroid_Blur_ByJni

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/mqt/cmakedemo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_mqt_cmakedemo2_BlurUtils.c  com_mqt_cmakedemo2_BlurUtils.h  native-lib.cpp
app/src/main/java/com/mqt/cmakedemo2/: BlurUtils.java  MainActivity.java  SampleActy.java  StackBlur.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mqt/cmakedemo2/: ExampleUnitTest.java
